# shimi

./: Cargo.toml  LICENSE  _build.rs
src/: main.rs  parser.rs  utils.rs
src/sub_commands/git/: command.rs  global_user_email.rs  ssh_key_gen.rs
